Introduce /snapshot/prepare API
